Add basic documentation
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ flake8 = 3.7.9
 isort = 4.3.21
 yapf = 0.29.0
 pylint = 2.4.4
+sphinx_rtd_theme = 0.4.3
 
 [testenv:flake8]
 deps =
@@ -44,3 +45,10 @@ commands = pylint {envsitepackagesdir}/satnogsconfig
 skip_install = True
 commands =
     python setup.py sdist bdist_wheel
+
+[testenv:docs]
+deps =
+    sphinx_rtd_theme=={[depversions]sphinx_rtd_theme}
+changedir = {toxinidir}/docs
+commands =
+    {envbindir}/sphinx-build -b html . "_build/html"
