--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 variables:
+  GITLAB_CI_IMAGE_ALPINE: 'alpine:3.9'
   GITLAB_CI_IMAGE_PYTHON: 'python:3'
   GITLAB_CI_PYPI_TOX: 'tox~=3.14.0'
   GITLAB_CI_PYPI_TWINE: 'twine~=3.1.0'
-  
 stages:
   - static
   - build
@@ -14,6 +14,19 @@ static:
     - pip install "$GITLAB_CI_PYPI_TOX"
   script:
     - tox -e "flake8,isort,yapf,pylint"
+docs:
+  stage: build
+  image: ${GITLAB_CI_IMAGE_PYTHON}
+  before_script:
+    - pip install "$GITLAB_CI_PYPI_TOX"
+  script:
+    - rm -rf docs/_build
+    - tox -e "docs"
+  artifacts:
+    expire_in: 1 week
+    when: always
+    paths:
+      - docs/_build/html
 build:
   stage: build
   image: ${GITLAB_CI_IMAGE_PYTHON}
@@ -27,3 +40,13 @@ build:
     when: always
     paths:
       - dist
+pages:
+  stage: deploy
+  image: ${GITLAB_CI_IMAGE_ALPINE}
+  script:
+    - mv docs/_build/html/ public/
+  artifacts:
+    paths:
+      - public
+  only:
+    - tags
