--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ description = SatNOGS configuration utility
 
 [options]
 packages = find:
+include_package_data = True
+zip_safe = False
 install_requires =
     pythondialog
     PyYAML
