--- a/satnogsconfig/menu.yml
+++ b/satnogsconfig/menu.yml
@@ -16,34 +16,58 @@ items:
         type: 'variablebox'
         short_description: 'Define API token'
         variable: 'satnogs_api_token'
+        tags:
+          - 'common'
+          - 'satnogs-client'
       SATNOGS_RX_DEVICE:
         type: 'variablebox'
         short_description: 'Define RX device'
         variable: 'satnogs_rx_device'
+        tags:
+          - 'common'
+          - 'satnogs-client'
       SATNOGS_STATION_ELEV:
         type: 'variablebox'
         short_description: 'Define station elevation'
         variable: 'satnogs_station_elev'
+        tags:
+          - 'common'
+          - 'satnogs-client'
       SATNOGS_STATION_ID:
         type: 'variablebox'
         short_description: 'Define station ID'
         variable: 'satnogs_station_id'
+        tags:
+          - 'common'
+          - 'satnogs-client'
       SATNOGS_STATION_LAT:
         type: 'variablebox'
         short_description: 'Define station latitude'
         variable: 'satnogs_station_lat'
+        tags:
+          - 'common'
+          - 'satnogs-client'
       SATNOGS_STATION_LON:
         type: 'variablebox'
         short_description: 'Define station longitude'
         variable: 'satnogs_station_lon'
+        tags:
+          - 'common'
+          - 'satnogs-client'
       HAMLIB_UTILS_ROT_ENABLED:
         type: 'variableyesno'
         short_description: 'Enable Hamlib rotctld'
         variable: 'hamlib_utils_rot_enabled'
+        tags:
+          - 'common'
+          - 'hamlib-utils'
       HAMLIB_UTILS_ROT_OPTS:
         type: 'variablebox'
         short_description: 'Define Hamlib rotctld options'
         variable: 'hamlib_utils_rot_opts'
+        tags:
+          - 'common'
+          - 'hamlib-utils'
   Advanced:
     type: 'submenu'
     short_description: 'Advanced Menu'
