--- a/satnogsconfig/menu.yml
+++ b/satnogsconfig/menu.yml
@@ -6,6 +6,19 @@ _submenu_description: &submenu_description |
 type: 'submenu'
 short_description: 'Main menu'
 description: *submenu_description
+exit_button: true
+cancel_label: 'Exit'
+extra_button: true
+extra_label: 'Apply'
+extra:
+  type: 'apply'
+defaults:
+  ok_label: 'OK'
+  cancel_label: 'Cancel'
+  exit_label: 'Exit'
+  help_label: 'Help'
+  no_label: 'No'
+  yes_label: 'Yes'
 items:
   Basic:
     type: 'submenu'
@@ -464,9 +477,6 @@ items:
     type: 'resetyesno'
     short_description: 'Reset configuration'
     defaultno: true
-  Apply:
-    type: 'apply'
-    short_description: 'Apply configuration'
   About:
     type: 'msgbox'
     short_description: 'Information about satnogs-config'
