--- a/satnogsconfig/menu.yml
+++ b/satnogsconfig/menu.yml
@@ -8,6 +8,10 @@ short_description: 'Main menu'
 description: *submenu_description
 exit_button: true
 cancel_label: 'Exit'
+cancel:
+  type: 'exit'
+  short_description: 'Are you sure you want to exit without applying configuration?'
+  defaultno: true
 extra_button: true
 extra_label: 'Apply'
 extra:
