--- a/satnogsconfig/menu.yml
+++ b/satnogsconfig/menu.yml
@@ -34,49 +34,49 @@ items:
         short_description: 'Define API token'
         variable: 'satnogs_api_token'
         tags:
-          - 'config'
+          - 'satnogs_client_config'
       SATNOGS_RX_DEVICE:
         type: 'variablebox'
         short_description: 'Define RX device'
         variable: 'satnogs_rx_device'
         tags:
-          - 'config'
+          - 'satnogs_client_config'
       SATNOGS_STATION_ELEV:
         type: 'variablebox'
         short_description: 'Define station elevation'
         variable: 'satnogs_station_elev'
         tags:
-          - 'config'
+          - 'satnogs_client_config'
       SATNOGS_STATION_ID:
         type: 'variablebox'
         short_description: 'Define station ID'
         variable: 'satnogs_station_id'
         tags:
-          - 'config'
+          - 'satnogs_client_config'
       SATNOGS_STATION_LAT:
         type: 'variablebox'
         short_description: 'Define station latitude'
         variable: 'satnogs_station_lat'
         tags:
-          - 'config'
+          - 'satnogs_client_config'
       SATNOGS_STATION_LON:
         type: 'variablebox'
         short_description: 'Define station longitude'
         variable: 'satnogs_station_lon'
         tags:
-          - 'config'
+          - 'satnogs_client_config'
       HAMLIB_UTILS_ROT_ENABLED:
         type: 'variableyesno'
         short_description: 'Enable Hamlib rotctld'
         variable: 'hamlib_utils_rot_enabled'
         tags:
-          - 'config'
+          - 'hamlib_utils_config'
       HAMLIB_UTILS_ROT_OPTS:
         type: 'variablebox'
         short_description: 'Define Hamlib rotctld options'
         variable: 'hamlib_utils_rot_opts'
         tags:
-          - 'config'
+          - 'hamlib_utils_config'
   Advanced:
     type: 'submenu'
     short_description: 'Advanced Menu'
@@ -92,43 +92,43 @@ items:
             short_description: 'Define API token'
             variable: 'satnogs_api_token'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_STATION_ELEV:
             type: 'variablebox'
             short_description: 'Define station elevation'
             variable: 'satnogs_station_elev'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_STATION_ID:
             type: 'variablebox'
             short_description: 'Define station ID'
             variable: 'satnogs_station_id'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_STATION_LAT:
             type: 'variablebox'
             short_description: 'Define station latitude'
             variable: 'satnogs_station_lat'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_STATION_LON:
             type: 'variablebox'
             short_description: 'Define station longitude'
             variable: 'satnogs_station_lon'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_NETWORK_API_URL:
             type: 'variablebox'
             short_description: 'Define network API URL'
             variable: 'satnogs_network_api_url'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_VERIFY_SSL:
             type: 'variableyesno'
             short_description: 'Verify SatNOGS network SSL certificate'
             variable: 'satnogs_verify_ssl'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
       Radio:
         type: 'submenu'
         short_description: 'Radio settings'
@@ -139,103 +139,103 @@ items:
             short_description: 'Define Hamlib rigctld IP'
             variable: 'satnogs_rig_ip'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_RIG_PORT:
             type: 'variablebox'
             short_description: 'Define Hamlib rigctld port'
             variable: 'satnogs_rig_port'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_DOPPLER_CORR_PER_SEC:
             type: 'variablebox'
             short_description: 'Define rate of doppler correction (sec)'
             variable: 'satnogs_doppler_corr_per_sec'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_LO_OFFSET:
             type: 'variablebox'
             short_description: 'Define local oscillator offset'
             variable: 'satnogs_lo_offset'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_PPM_ERROR:
             type: 'variablebox'
             short_description: 'Define PPM error (integer)'
             variable: 'satnogs_ppm_error'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_IF_GAIN:
             type: 'variablebox'
             short_description: 'Define SatNOGS Radio IF Gain'
             variable: 'satnogs_if_gain'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_RF_GAIN:
             type: 'variablebox'
             short_description: 'Define SatNOGS Radio RF Gain'
             variable: 'satnogs_rf_gain'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_BB_GAIN:
             type: 'variablebox'
             short_description: 'Define SatNOGS Radio BB Gain'
             variable: 'satnogs_bb_gain'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_RX_BANDWIDTH:
             type: 'variablebox'
             short_description: 'Define SatNOGS Radio RF Bandwidth (Hz)'
             variable: 'satnogs_rx_bandwidth'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_ANTENNA:
             type: 'variablebox'
             short_description: 'Define SatNOGS Radio Antenna'
             variable: 'satnogs_antenna'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_RX_DEVICE:
             type: 'variablebox'
             short_description: 'Define RX device'
             variable: 'satnogs_rx_device'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_SOAPY_RX_DEVICE:
             type: 'variablebox'
             short_description: 'Define Soapy RX device'
             variable: 'satnogs_soapy_rx_device'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_RX_SAMP_RATE:
             type: 'variablebox'
             short_description: 'Define RX sampling rate'
             variable: 'satnogs_rx_samp_rate'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_DEV_ARGS:
             type: 'variablebox'
             short_description: 'Define SatNOGS Radio device arguments'
             variable: 'satnogs_dev_args'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           ENABLE_IQ_DUMP:
             type: 'variableyesno'
             short_description: 'Enable IQ dump'
             variable: 'enable_iq_dump'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           IQ_DUMP_FILENAME:
             type: 'variablebox'
             short_description: 'Define IQ dump filename'
             variable: 'iq_dump_filename'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           DISABLE_DECODED_DATA:
             type: 'variableyesno'
             short_description: 'Disable decoded data'
             variable: 'disable_decoded_data'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
       Rotator:
         type: 'submenu'
         short_description: 'Rotator settings'
@@ -263,19 +263,19 @@ items:
             short_description: 'Enable waterfall power range adjustment'
             variable: 'satnogs_waterfall_autorange'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_WATERFALL_MIN_VALUE:
             type: 'variablebox'
             short_description: 'Define waterfall minimum power'
             variable: 'satnogs_waterfall_min_value'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_WATERFALL_MAX_VALUE:
             type: 'variablebox'
             short_description: 'Define Waterfall maximum power'
             variable: 'satnogs_waterfall_max_value'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
       Scripts:
         type: 'submenu'
         short_description: 'Pre/post-observation scripts'
@@ -286,13 +286,13 @@ items:
             short_description: 'Define pre-observation script'
             variable: 'satnogs_pre_observation_script'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_POST_OBSERVATION_SCRIPT:
             type: 'variablebox'
             short_description: 'Define post-observation script'
             variable: 'satnogs_post_observation_script'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
       Paths:
         type: 'submenu'
         short_description: 'Path settings'
@@ -303,37 +303,37 @@ items:
             short_description: 'Define application data path'
             variable: 'satnogs_app_path'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_OUTPUT_PATH:
             type: 'variablebox'
             short_description: 'Define output data path'
             variable: 'satnogs_output_path'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_COMPLETE_OUTPUT_PATH:
             type: 'variablebox'
             short_description: 'Define completed data path'
             variable: 'satnogs_complete_output_path'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_INCOMPLETE_OUTPUT_PATH:
             type: 'variablebox'
             short_description: 'Define incompleted data path'
             variable: 'satnogs_incomplete_output_path'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_REMOVE_RAW_FILES:
             type: 'variableyesno'
             short_description: 'Remove raw files'
             variable: 'satnogs_remove_raw_files'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
           SATNOGS_SQLITE_URL:
             type: 'variablebox'
             short_description: 'Define SQLite URI'
             variable: 'satnogs_sqlite_url'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
       Hamlib:
         type: 'submenu'
         short_description: 'Hamlib settings'
@@ -344,25 +344,25 @@ items:
             short_description: 'Enable Hamlib rotctld'
             variable: 'hamlib_utils_rot_enabled'
             tags:
-              - 'config'
+              - 'hamlib_utils_config'
           HAMLIB_UTILS_ROT_OPTS:
             type: 'variablebox'
             short_description: 'Define Hamlib rotctld options'
             variable: 'hamlib_utils_rot_opts'
             tags:
-              - 'config'
+              - 'hamlib_utils_config'
           HAMLIB_UTILS_RIG_DISABLED:
             type: 'variableyesno'
             short_description: 'Disable Hamlib rigctld'
             variable: 'hamlib_utils_rig_enabled'
             tags:
-              - 'config'
+              - 'hamlib_utils_config'
           HAMLIB_UTILS_RIG_OPTS:
             type: 'variablebox'
             short_description: 'Define Hamlib rigctld options'
             variable: 'hamlib_utils_rig_opts'
             tags:
-              - 'config'
+              - 'hamlib_utils_config'
       SNMP:
         type: 'submenu'
         short_description: 'SNMP settings'
@@ -373,19 +373,19 @@ items:
             short_description: 'Enable snmpd'
             variable: 'snmpd_enabled'
             tags:
-              - 'config'
+              - 'snmpd_config'
           SNMPD_AGENTADDRESS:
             type: 'variablebox'
             short_description: 'Define snmpd agentAddress'
             variable: 'snmpd_agentaddress'
             tags:
-              - 'config'
+              - 'snmpd_config'
           SNMPD_ROCOMMUNITY:
             type: 'variablebox'
             short_description: 'Define snmpd rocommunity'
             variable: 'snmpd_rocommunity'
             tags:
-              - 'config'
+              - 'snmpd_config'
       GPS:
         type: 'submenu'
         short_description: 'GPS settings'
@@ -396,7 +396,7 @@ items:
             short_description: 'Enable GPSd'
             variable: 'gpsd_enabled'
             tags:
-              - 'config'
+              - 'gpsd_config'
       Software:
         type: 'submenu'
         short_description: 'Software package settings'
@@ -407,55 +407,55 @@ items:
             short_description: 'Define package repository'
             variable: 'apt_repository'
             tags:
-              - 'software'
+              - 'apt_software'
           APT_KEY_URL:
             type: 'variablebox'
             short_description: 'Define package repository key URL'
             variable: 'apt_key_url'
             tags:
-              - 'software'
+              - 'apt_software'
           APT_KEY_ID:
             type: 'variablebox'
             short_description: 'Define package repository key ID'
             variable: 'apt_key_id'
             tags:
-              - 'software'
+              - 'apt_software'
           SATNOGS_SETUP_RELEASE_UPGRADE_ENABLED:
             type: 'variableyesno'
             short_description: 'Enable release upgrades'
             variable: 'satnogs_setup_release_upgrade_enabled'
             tags:
-              - 'software'
+              - 'satnogs_setup_software'
           SATNOGS_CLIENT_VERSION:
             type: 'variablebox'
             short_description: 'Define SatNOGS client version'
             variable: 'satnogs_client_version'
             tags:
-              - 'software'
+              - 'satnogs_client_software'
           SATNOGS_CLIENT_URL:
             type: 'variablebox'
             short_description: 'Define SatNOGS client Git URL'
             variable: 'satnogs_client_url'
             tags:
-              - 'software'
+              - 'satnogs_client_software'
           SATNOGS_RADIO_GR_SATNOGS_VERSION:
             type: 'variablebox'
             short_description: 'Define gr-satnogs package version'
             variable: 'satnogs_radio_gr_satnogs_version'
             tags:
-              - 'software'
+              - 'satnogs_radio_software'
           SATNOGS_SETUP_ANSIBLE_URL:
             type: 'variablebox'
             short_description: 'Define Ansible Git URL'
             variable: 'satnogs_setup_ansible_url'
             tags:
-              - 'software'
+              - 'satnogs_setup_software'
           SATNOGS_SETUP_ANSIBLE_BRANCH:
             type: 'variablebox'
             short_description: 'Define Ansible Git branch'
             variable: 'satnogs_setup_ansible_branch'
             tags:
-              - 'software'
+              - 'satnogs_setup_software'
       Debug:
         type: 'submenu'
         short_description: 'Debug settings'
@@ -466,7 +466,7 @@ items:
             short_description: 'Define SatNOGS client log level'
             variable: 'satnogs_log_level'
             tags:
-              - 'config'
+              - 'satnogs_client_config'
   Show:
     type: 'configbox'
     short_description: 'Show configuration file'
