Lint YAML menu file (fixes #6)
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = flake8,isort,yapf,pylint,build,docs
+envlist = flake8,isort,yapf,pylint,yamllint,build,docs
 
 [depversions]
 flake8 = 3.7.9
 isort = 4.3.21
 yapf = 0.29.0
 pylint = 2.4.4
+yamllint = 1.20.0
 sphinx_rtd_theme = 0.4.3
 
 [testenv:flake8]
@@ -40,6 +41,11 @@ commands = yapf -i -r .
 deps =
     pylint=={[depversions]pylint}
 commands = pylint {envsitepackagesdir}/satnogsconfig
+
+[testenv:yamllint]
+deps =
+    yamllint=={[depversions]yamllint}
+commands = yamllint -s {envsitepackagesdir}/satnogsconfig/menu.yml
 
 [testenv:build]
 skip_install = True
