--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ static:
   before_script:
     - pip install "$GITLAB_CI_PYPI_TOX"
   script:
-    - tox -e "flake8,isort,yapf,pylint"
+    - tox -e "flake8,isort,yapf,pylint,yamllint"
 docs:
   stage: build
   image: ${GITLAB_CI_IMAGE_PYTHON}
