--- a/satnogsconfig/menu.yml
+++ b/satnogsconfig/menu.yml
@@ -10,7 +10,8 @@ exit_button: true
 cancel_label: 'Exit'
 cancel:
   type: 'exit'
-  short_description: 'Are you sure you want to exit without applying configuration?'
+  short_description: >-
+    Are you sure you want to exit without applying configuration?
   title: 'Exit without applying'
   defaultno: true
 extra_button: true
