Disable mouse when showing configuration
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/satnogsconfig/menu.yml
+++ b/satnogsconfig/menu.yml
@@ -524,6 +524,7 @@ items:
     type: 'configbox'
     short_description: 'Show configuration file'
     title: 'SatNOGS client configuration'
+    no_mouse: true
   Update:
     type: 'update'
     short_description: 'Update configuration tool'
