Add APT helper for checking for package updates
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/tox.ini
+++ b/tox.ini
@@ -13,44 +13,52 @@ sphinx_rtd_theme = 0.4.3
 deps =
     flake8=={[depversions]flake8}
 skip_install = True
-commands = flake8
+commands = {envbindir}/flake8
+sitepackages = true
 
 [testenv:isort]
 deps =
     isort=={[depversions]isort}
-commands = isort -rc -c -df
+commands = {envbindir}/isort -rc -c -df
+sitepackages = true
 
 [testenv:isort-apply]
 deps =
     isort=={[depversions]isort}
-commands = isort -rc -y
+commands = {envbindir}/isort -rc -y
+sitepackages = true
 
 [testenv:yapf]
 deps =
     yapf=={[depversions]yapf}
 skip_install = True
-commands = yapf -d -r .
+commands = {envbindir}/yapf -d -r .
+sitepackages = true
 
 [testenv:yapf-apply]
 deps =
     yapf=={[depversions]yapf}
 skip_install = True
-commands = yapf -i -r .
+commands = {envbindir}/yapf -i -r .
+sitepackages = true
 
 [testenv:pylint]
 deps =
     pylint=={[depversions]pylint}
-commands = pylint {envsitepackagesdir}/satnogsconfig
+commands = {envbindir}/pylint {envsitepackagesdir}/satnogsconfig
+sitepackages = true
 
 [testenv:yamllint]
 deps =
     yamllint=={[depversions]yamllint}
-commands = yamllint -s {envsitepackagesdir}/satnogsconfig/menu.yml
+commands = {envbindir}/yamllint -s {envsitepackagesdir}/satnogsconfig/menu.yml
+sitepackages = true
 
 [testenv:build]
 skip_install = True
 commands =
     python setup.py sdist bdist_wheel
+sitepackages = true
 
 [testenv:docs]
 deps =
@@ -58,3 +66,4 @@ deps =
 changedir = {toxinidir}/docs
 commands =
     {envbindir}/sphinx-build -b html . "_build/html"
+sitepackages = true
