--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,29 @@
 variables:
   GITLAB_CI_IMAGE_ALPINE: 'alpine:3.9'
-  GITLAB_CI_IMAGE_PYTHON: 'python:3'
-  GITLAB_CI_PYPI_TOX: 'tox~=3.14.0'
-  GITLAB_CI_PYPI_TWINE: 'twine~=3.1.0'
+  GITLAB_CI_IMAGE_DEBIAN: 'debian'
+  GITLAB_CI_APT_PACKAGES: >-
+    tox
+    python3-apt
+    python3-dialog
+    python3-yaml
 stages:
   - static
   - build
   - deploy
 static:
   stage: static
-  image: ${GITLAB_CI_IMAGE_PYTHON}
+  image: ${GITLAB_CI_IMAGE_DEBIAN}
   before_script:
-    - pip install "$GITLAB_CI_PYPI_TOX"
+    - apt-get -y update
+    - apt-get -y install $GITLAB_CI_APT_PACKAGES
   script:
     - tox -e "flake8,isort,yapf,pylint,yamllint"
 docs:
   stage: build
-  image: ${GITLAB_CI_IMAGE_PYTHON}
+  image: ${GITLAB_CI_IMAGE_DEBIAN}
   before_script:
-    - pip install "$GITLAB_CI_PYPI_TOX"
+    - apt-get -y update
+    - apt-get -y install $GITLAB_CI_APT_PACKAGES
   script:
     - rm -rf docs/_build
     - tox -e "docs"
@@ -29,9 +34,10 @@ docs:
       - docs/_build/html
 build:
   stage: build
-  image: ${GITLAB_CI_IMAGE_PYTHON}
+  image: ${GITLAB_CI_IMAGE_DEBIAN}
   before_script:
-    - pip install "$GITLAB_CI_PYPI_TOX"
+    - apt-get -y update
+    - apt-get -y install $GITLAB_CI_APT_PACKAGES
   script:
     - rm -rf dist
     - tox -e "build"
@@ -42,9 +48,10 @@ build:
       - dist
 deploy:
   stage: deploy
-  image: ${GITLAB_CI_IMAGE_PYTHON}
+  image: ${GITLAB_CI_IMAGE_DEBIAN}
   before_script:
-    - pip install "$GITLAB_CI_PYPI_TWINE"
+    - apt-get -y update
+    - apt-get -y install twine
   script:
     - rm -rf dist
     - python setup.py bdist_wheel
