Add message box for reminding users to 'Apply' and 'Update' after software config changes
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/satnogsconfig/menu.yml
+++ b/satnogsconfig/menu.yml
@@ -436,6 +436,14 @@ items:
         description: *submenu_description
         defaults:
           title: 'Parameter definition'
+        cancel:
+          type: 'msgbox'
+          title: 'Software configuration changes warning'
+          message: >-
+            WARNING: If changes have been made on any software configuration
+            options, it is required to 'Apply' and then 'Update' as soon as
+            possible otherwise you may encounter unpredictable behavior
+          pop: true
         items:
           EXPERIMENTAL:
             type: 'variableyesno'
