gitlab-ci: Upload to PyPI using 'tox'
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ yapf = 0.29.0
 pylint = 2.4.4
 yamllint = 1.20.0
 sphinx_rtd_theme = 0.4.3
+twine = 3.1.1
 
 [testenv:flake8]
 deps =
@@ -57,7 +58,16 @@ sitepackages = true
 [testenv:build]
 skip_install = True
 commands =
-    python setup.py sdist bdist_wheel
+    python setup.py bdist_wheel
+sitepackages = true
+
+[testenv:upload]
+deps =
+    twine=={[depversions]twine}
+skip_install = True
+commands =
+    python setup.py bdist_wheel
+    {envbindir}/twine upload -u "{env:PYPI_USERNAME}" -p "{env:PYPI_PASSWORD}" dist/*
 sitepackages = true
 
 [testenv:docs]
