--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,11 +51,10 @@ deploy:
   image: ${GITLAB_CI_IMAGE_DEBIAN}
   before_script:
     - apt-get -y update
-    - apt-get -y install python3-wheel twine
+    - apt-get -y install $GITLAB_CI_APT_PACKAGES
   script:
     - rm -rf dist
-    - python3 setup.py bdist_wheel
-    - twine upload -u "$PYPI_USERNAME" -p "$PYPI_PASSWORD" dist/*
+    - tox -e "upload"
   only:
     refs:
       - tags
