gitlab-ci: Use Debian Buster image for running CI
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 variables:
   GITLAB_CI_IMAGE_ALPINE: 'alpine:3.9'
-  GITLAB_CI_IMAGE_DEBIAN: 'debian'
+  GITLAB_CI_IMAGE_DEBIAN: 'debian:buster'
   GITLAB_CI_APT_PACKAGES: >-
     tox
     python3-apt
