tox: Build both a binary and source package
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/tox.ini
+++ b/tox.ini
@@ -58,7 +58,7 @@ sitepackages = true
 [testenv:build]
 skip_install = True
 commands =
-    python setup.py bdist_wheel
+    python setup.py sdist bdist_wheel
 sitepackages = true
 
 [testenv:upload]
@@ -66,7 +66,7 @@ deps =
     twine=={[depversions]twine}
 skip_install = True
 commands =
-    python setup.py bdist_wheel
+    python setup.py sdist bdist_wheel
     {envbindir}/twine upload -u "{env:PYPI_USERNAME}" -p "{env:PYPI_PASSWORD}" dist/*
 sitepackages = true
 
