--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ exclude = satnogsconfig/_version.py,versioneer.py,docs,build,.tox
 [yapf]
 dedent_closing_brackets = True
 allow_split_before_dict_value = False
+indent_dictionary_value = True
 
 [tool:isort]
 skip_glob = docs,build,.tox
